Q42020 update 02 (#32)
* q42020-update: Bump version of shadowjar

* q42020-update: Update test

* q42020-update-02: Use "val" where possible in anticipation of Java language changes and to reduce boilerplate.
Disable memory-intensive test
Bump version of Gradle

* q42020-update-02: Increment version of gradlew to 6.7

* q42020-update-02: Attempt to download specific version of Gradle

* q42020-update-02: Use SSL URL for distribution

* q42020-update-02: Fix remaining checkstyle issues

* q42020-update-02: Simplify test and remove Slf4j explicit logger

* q42020-update-02: Remove unnecessary test chunk. Test passes locally, but fails on Travis

* q42020-update-02: Use "val" throughout test

* q42020-update-02: Print test failure information to STDOUT

* q42020-update-02: Scan output

* q42020-update-02: Full stack trace